Trial/aks/traefik/dotnetcoreapp/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroute.dotnetcoretcp
  namespace: cmpp

spec:
  entryPoints:
    - dotnetcoretcp
  routes:
  - match: HostSNI(`*`)
    kind: Rule
    services:
      - name: dotnetcoretcpserver
        port: 8001
